--- a/C# Design Patterns.csproj
+++ b/C# Design Patterns.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>C__Design_Patterns</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+  </ItemGroup>
 </Project>
